# wordpress-scanner

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  NOTES.md  README.md  TODO.md  build.sh  database.db  docker-compose.yml  fly.toml  package.json  renovate.json  wrangler.toml
.github/workflows/: build-docker-image.yml  build-image.yml  deploy.yml  fly-deploy.yml
docs/: README.md  syntax.md
src/: index.test.ts  index.ts  main.rs  requestor.rs  scanner.rs
src/requestor/config/: mod.rs
src/requestor/parsers/: mod.rs
src/types/: mod.rs
templates/: base.html.tera  index.html.tera  scan.html.tera
