[package]
name = "wordpress-scanner"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true

[dependencies]
rocket = "0.5.0-rc.2"
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.25"
openssl = { version = "*", features = ["vendored"] }
tera = "1"
lol_html = "0.3.1"
url = "2.3.1"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]
