[package]
name = "wordpress-scanner"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true

[dependencies]
rocket = "0.5.0-rc.2"
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.22.0", features = ["full"] }
futures = "0.3.25"
openssl = { version = "*", features = ["vendored"] }
lol_html = "0.3.1"
url = "2.3.1"
phf = { version = "0.11.1", features = ["macros"] }
rand = "0.8.5"
base64 = "0.13.1"
chrono = "0.4.23"