[package]
name = "wordpress-scanner"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.24.2", features = ["full"] }
futures = "0.3.25"
openssl = { version = "*", features = ["vendored"] }
lol_html = "0.3.2"
url = "2.3.1"
phf = { version = "0.11.1", features = ["macros"] }
rand = "0.8.5"
base64 = "0.20.0"
chrono = "0.4.23"